--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
   <head>
     <title>  N&oslash;ught</title>
     <meta name="viewport" content="initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/nought2.css">
-    <link rel="shortcut icon" href="../images/nought-icon.png" type="image/jpg">  
+    <link rel="stylesheet" type="text/css" href="css/nought.css">
+    <link rel="shortcut icon" href="./images/nought-icon.png" type="image/png">  
   </head>
   <body>
 
