--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>  N&oslash;ught</title>
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/nought.css">
-    <link rel="shortcut icon" href="../images/nought-icon.png" type="image/jpg">  
+    <link rel="shortcut icon" href="./images/nought-icon.png" type="image/png">  
   </head>
   <body>
 
