--- a/gigs.html
+++ b/gigs.html
@@ -39,7 +39,7 @@
             Belgium<br />
             <br />
           </span>
-          -->
+          
           <br />
           <br />
           <span class="gig">
@@ -53,6 +53,23 @@
             <a href="http://www.newcrossinn.com/product/nought-cavalli-more/">tickets can be bought here</a>
             <br />
           </span>
+          -->
+
+          <br />
+          <br />
+          <span class="gig">
+            <a href="https://www.facebook.com/events/1497141570400764/">Wednesday the 17th of January 2018</a><br />
+            <br />
+            at Cafe Oto,<br /> 
+            18-22 Ashwin St,<br /> 
+            London E8 3DL<br />
+            with Dead Days Beyond Help<br />
+            <br />
+            <a href="https://www.cafeoto.co.uk/events/nought-dead-days-beyond-help/">details and tickets</a>
+            <br />
+          </span>
+
+
 
         </div>  
       </center>
