--- a/gigs.html
+++ b/gigs.html
@@ -53,7 +53,7 @@
             <a href="http://www.newcrossinn.com/product/nought-cavalli-more/">tickets can be bought here</a>
             <br />
           </span>
-          -->
+          
 
           <br />
           <br />
@@ -68,7 +68,21 @@
             <a href="https://www.cafeoto.co.uk/events/nought-dead-days-beyond-help/">details and tickets</a>
             <br />
           </span>
+          -->
 
+          <br />
+          <br />
+          <span class="gig">
+            <a href="https://www.facebook.com/events/1497141570400764/">Tuesday the 13th of August 2019</a><br />
+            <br />
+            at The Lexington,<br /> 
+            96-98 Pentonville Road,<br /> 
+            London N1 9JB<br />
+            with Zu<br />
+            <br />
+            <a href="https://www.facebook.com/events/2392174271001849/?notif_t=event_calendar_create&notif_id=1557231477569446">details and tickets</a>
+            <br />
+          </span>
 
 
         </div>  
